Fix spacing for logged in link and right-sidebar course list

--- a/assets/scss/pages/_single-course.scss
+++ b/assets/scss/pages/_single-course.scss
@@ -130,10 +130,6 @@
 				display: flex;
 				flex-direction: column;
 				padding-left: $spacing_8px;
-
-				li {
-					margin-bottom: $spacing_8px;
-				}
 			}
 		}
 
@@ -744,10 +740,10 @@
 		justify-content: center;
 		padding-top: $spacing_24px;
 		margin-top: $spacing_40px;
-	}
 
-	.masteriyo-link-login {
-		margin: 0 $spacing_4px;
+		p {
+			margin-bottom: 0;
+		}
 	}
 }
 
